--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--white-color);
+    background-color: white;
     color: var(--dark-color);
 }
 
