--- a/css/components.css
+++ b/css/components.css
@@ -8,7 +8,6 @@
     align-items: center;
     border: 1px solid #ccc;
     border-radius: 5px;
-    overflow: hidden;
     background: #fff;
 }
 
@@ -226,6 +225,12 @@ select {
     margin-top: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
+}
+
+select {
+    height: 40px;
+    background-color: white;
+    cursor: pointer;
 }
 
 
