--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
