--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import 'variables.css';
 @import 'base.css';
 @import 'layout.css';
-@import 'components.css';
 @import 'pages.css';
+@import 'components.css';
+@import 'whatsapp.css';
 @import 'responsive.css';
